--- a/templates/admin/widgets/postal_code.html
+++ b/templates/admin/widgets/postal_code.html
@@ -1,2 +1,2 @@
-{% for widget in widget.subwidgets %}{% include widget.template_name %}{% if not forloop.last %}-&nbsp;{% endif %}{% endfor %}
+{% include "admin/widgets/multiwidget_hyphen.html" %}
 &nbsp;<input type="button" id="postal_code_search" value="住所検索" />
